add interface in mstablemgr
